--- a/src/components/UserDigest/Mini/styles.module.css
+++ b/src/components/UserDigest/Mini/styles.module.css
@@ -37,8 +37,6 @@
 
 .displayname {
   @mixin line-clamp;
-
-  line-height: 1.25;
 }
 
 .username {
@@ -50,24 +48,34 @@
   color: var(--color-grey);
 }
 
+/* 12px */
 .textSizeXs {
   font-size: var(--font-size-xs);
+  line-height: 1.125rem;
 }
 
+/* 13px */
 .textSizeSmS {
   font-size: var(--font-size-sm-s);
+  line-height: 1.25;
 }
 
+/* 14px */
 .textSizeSm {
   font-size: var(--font-size-sm);
+  line-height: 1.375rem;
 }
 
-.textSizeMd {
-  font-size: var(--font-size-md);
-}
-
+/* 15px */
 .textSizeMdS {
   font-size: var(--font-size-md-s);
+  line-height: 1.25;
+}
+
+/* 16px */
+.textSizeMd {
+  font-size: var(--font-size-md);
+  line-height: 1.5rem;
 }
 
 .textWeightMd {
